Updated color codes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
       padding: 25px;
       color: white;
       text-decoration: none;
-      letter-spacing: 6px
+      letter-spacing: 6px;
+      font-weight: bold;
     }
   </style>
 </head>
@@ -50,11 +51,11 @@
   <h1 id="apu">APURAV CHAUHAN</h1>
   <hr>
   <a target="_blank" href="https://www.linkedin.com/in/apuravchauhan/"><span
-      style="color:#69c9d0">L</span><span>I</span><span>N</span><span>K</span><span>.</span></a>
+      style="color:#13dfee">L</span><span>I</span><span>N</span><span>K</span><span>.</span></a>
   <a target="_blank" href="https://medium.com/@apuravchauhan"><span>M</span><span>E</span><span
-      style="color:#ee1c52">D</span><span>.</span></a>
+      style="color:#ee0642">D</span><span>.</span></a>
   <a target="_blank" href="https://twitter.com/apuravchauhan"><span>T</span><span>W</span><span style="color:#69c9d0">I</span><span
-      style="color:#69c9d0">.</span></a>
+      style="color:#13dfee">.</span></a>
   <script>
     window.setInterval(function () {
       var plusOrMinus = Math.random() < 0.5 ? -1 : 1;
@@ -63,9 +64,9 @@
       var dis2 = plusOrMinus2 * Math.floor((Math.random() * 6) + 1);
       var dis3 = plusOrMinus * Math.floor((Math.random() * 6) + 1);
       var dis4 = plusOrMinus2 * Math.floor((Math.random() * 6) + 1);
-      document.getElementById("apu").style.textShadow = dis + "px " + dis3 + "px 0px #69c9d0, " + dis2 + "px " + dis4 + "px 0px #ee1c52";
+      document.getElementById("apu").style.textShadow = dis + "px " + dis3 + "px 0px #13dfee, " + dis2 + "px " + dis4 + "px 0px #ee0642";
     }, 1000);
-    var colors = ["#69c9d0", "#ee1c52", "#ffffff"];
+    var colors = ["#13dfee", "#ee0642", "#ffffff"];
     window.setInterval(function () {
       var eles = document.getElementsByTagName("span");
       for (i of eles) {
