--- a/pirates.html
+++ b/pirates.html
@@ -3,80 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Adventurous Pirates - Contact</title>
+    <title>The Adventurous Pirates - Contact Page</title>
     <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
             min-height: 100vh;
             background: linear-gradient(to bottom, #87CEEB, #4682B4);
-            overflow-x: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 2rem;
             position: relative;
-        }
-
-        .wave {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            height: 200px;
-            background: rgba(255, 255, 255, 0.2);
-            animation: wave 7s cubic-bezier(0.36, 0.45, 0.63, 0.53) infinite;
-        }
-
-        .wave:nth-child(2) {
-            bottom: 40px;
-            opacity: 0.5;
-            animation-delay: -3.5s;
-        }
-
-        .bubble {
-            position: absolute;
-            background: rgba(255, 255, 255, 0.2);
-            border-radius: 50%;
-        }
-
-        .bubble:nth-child(1) {
-            width: 20px;
-            height: 20px;
-            left: 25%;
-            animation: float 6s ease-in-out infinite;
-        }
-
-        .bubble:nth-child(2) {
-            width: 30px;
-            height: 30px;
-            right: 33%;
-            animation: float 4s ease-in-out infinite;
-        }
-
-        .bubble:nth-child(3) {
-            width: 15px;
-            height: 15px;
-            left: 66%;
-            animation: float 3s ease-in-out infinite;
+            overflow-x: hidden;
         }
 
         .container {
-            max-width: 600px;
-            margin: 0 auto;
-            padding: 2rem 1rem;
-            position: relative;
-            z-index: 1;
-        }
-
-        .card {
             background: rgba(255, 255, 255, 0.9);
             backdrop-filter: blur(10px);
             padding: 2rem;
             border-radius: 1rem;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-            animation: fadeInUp 0.5s ease-out;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 600px;
+            position: relative;
+            z-index: 1;
+            animation: fadeIn 0.5s ease-out;
         }
 
         .header {
@@ -85,45 +42,49 @@
             animation: fadeIn 0.5s ease-out;
         }
 
-        .title {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 0.75rem;
-            margin-bottom: 1rem;
+        .logo {
+            font-size: 2rem;
             color: #4682B4;
+            margin-bottom: 1rem;
+            animation: rock 3s ease-in-out infinite;
+            display: inline-block;
         }
 
-        .ship-icon {
-            width: 2.5rem;
-            height: 2.5rem;
-            animation: rock 3s ease-in-out infinite;
+        .title {
+            font-size: 1.5rem;
+            color: #4682B4;
+            margin-bottom: 0.5rem;
+        }
+
+        .subtitle {
+            color: #666;
+            line-height: 1.6;
         }
 
         .form-group {
             margin-bottom: 1.5rem;
-            transform: translateZ(0);
+            transform: translateY(0);
             transition: transform 0.2s;
         }
 
         .form-group:hover {
-            transform: scale(1.02);
+            transform: translateY(-2px);
         }
 
         label {
             display: block;
             margin-bottom: 0.5rem;
-            color: #4a5568;
+            color: #444;
             font-weight: 500;
         }
 
         input, textarea {
             width: 100%;
-            padding: 0.75rem 1rem;
-            border: 1px solid #e2e8f0;
+            padding: 0.75rem;
+            border: 2px solid #ddd;
             border-radius: 0.5rem;
             font-size: 1rem;
-            transition: all 0.2s;
+            transition: all 0.3s;
             background: white;
         }
 
@@ -133,60 +94,77 @@
             box-shadow: 0 0 0 3px rgba(70, 130, 180, 0.2);
         }
 
+        textarea {
+            min-height: 120px;
+            resize: vertical;
+        }
+
         button {
             width: 100%;
-            padding: 0.75rem 1rem;
+            padding: 1rem;
             background: #4682B4;
             color: white;
             border: none;
             border-radius: 0.5rem;
             font-size: 1rem;
+            font-weight: 600;
             cursor: pointer;
+            transition: all 0.3s;
             display: flex;
             align-items: center;
             justify-content: center;
             gap: 0.5rem;
-            transition: all 0.2s;
         }
 
         button:hover {
             background: #357599;
-            transform: scale(1.02);
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(70, 130, 180, 0.2);
         }
 
-        button svg {
-            transition: transform 0.2s;
+        .waves {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            height: 200px;
+            overflow: hidden;
+            margin-bottom: -7px;
         }
 
-        button:hover svg {
-            transform: translateX(4px);
+        .wave {
+            position: absolute;
+            left: -100%;
+            width: 200%;
+            height: 100%;
+            background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 800 88.7'%3E%3Cpath d='M800 56.9c-155.5 0-204.9-50-405.5-49.9-200 0-250 49.9-394.5 49.9v31.8h800v-.2-31.6z' fill='%23ffffff22'/%3E%3C/svg%3E");
+            background-position: 0 bottom;
+            transform-origin: center bottom;
         }
 
-        .footer {
-            text-align: center;
-            margin-top: 2rem;
-            color: #4a5568;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 0.5rem;
+        .wave1 {
+            animation: wave 12s linear infinite;
         }
 
-        .anchor-icon {
-            width: 1rem;
-            height: 1rem;
-            animation: bounce 2s infinite;
+        .wave2 {
+            animation: wave 8s linear infinite;
+            opacity: 0.5;
+        }
+
+        .wave3 {
+            animation: wave 6s linear infinite;
+            opacity: 0.3;
         }
 
         @keyframes wave {
-            0% { transform: translateX(0) translateZ(0) scaleY(1); }
-            50% { transform: translateX(-25%) translateZ(0) scaleY(0.55); }
-            100% { transform: translateX(-50%) translateZ(0) scaleY(1); }
+            0% { transform: translateX(0) translateZ(0) scaleY(1) }
+            50% { transform: translateX(25%) translateZ(0) scaleY(0.5) }
+            100% { transform: translateX(50%) translateZ(0) scaleY(1) }
         }
 
-        @keyframes float {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-20px); }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
         @keyframes rock {
@@ -194,89 +172,87 @@
             50% { transform: rotate(5deg); }
         }
 
-        @keyframes bounce {
+        .footer {
+            text-align: center;
+            margin-top: 2rem;
+            color: #666;
+            font-size: 0.9rem;
+            animation: fadeIn 0.5s ease-out 0.2s backwards;
+        }
+
+        .bubble {
+            position: fixed;
+            background: rgba(255, 255, 255, 0.2);
+            border-radius: 50%;
+            pointer-events: none;
+            animation: float 4s ease-in-out infinite;
+        }
+
+        @keyframes float {
             0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-5px); }
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(10px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
+            50% { transform: translateY(-20px); }
         }
     </style>
 </head>
 <body>
-    <div class="wave"></div>
-    <div class="wave"></div>
-    <div class="bubble"></div>
-    <div class="bubble"></div>
-    <div class="bubble"></div>
-
     <div class="container">
-        <div class="card">
-            <div class="header">
-                <div class="title">
-                    <svg class="ship-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <path d="M2 21c.6.5 1.2 1 2.4 1 2.4 0 2.4-1.5 4.8-1.5 2.4 0 2.4 1.5 4.8 1.5 2.4 0 2.4-1.5 4.8-1.5 1.2 0 1.8.5 2.4 1"/>
-                        <path d="M19 17.7c.4-.2.8-.4 1.1-.7 2-2 3-6 3-10"/>
-                        <path d="M3 6c0 4 1 8 3 10 1.3 1.3 2.7 2 4 2 1.3 0 2.7-.7 4-2 2-2 3-6 3-10"/>
-                        <path d="M12 2v4"/>
-                    </svg>
-                    <h1>The Adventurous Pirates</h1>
-                </div>
-                <h2 style="color: #4a5568; margin-bottom: 0.5rem;">Ahoy, Young Explorer!</h2>
-                <p style="color: #718096;">
-                    Thank you for joining our pirate adventure! If you enjoyed reading "The Adventurous Pirates",
-                    I'd love to hear from you. Send me a message below!
-                </p>
+        <div class="header">
+            <div class="logo">⚓</div>
+            <h1 class="title">The Adventurous Pirates</h1>
+            <p class="subtitle">Ahoy, Young Explorer! Thank you for joining our pirate adventure. If you enjoyed reading "The Adventurous Pirates", we'd love to hear from you!</p>
+        </div>
+
+        <form name="contactForm" netlify>
+            <div class="form-group">
+                <label for="name">Your Name</label>
+                <input type="text" name="name" required placeholder="Captain Jack">
             </div>
 
-            <form id="contactForm" netlify>
-                <div class="form-group">
-                    <label for="name">Your Name</label>
-                    <input type="text" id="name" required placeholder="Captain Jack">
-                </div>
-
-                <div class="form-group">
-                    <label for="email">Email Address</label>
-                    <input type="email" id="email" required placeholder="captain@pirates.com">
-                </div>
-
-                <div class="form-group">
-                    <label for="message">Your Message</label>
-                    <textarea id="message" rows="4" required placeholder="Tell me what you thought about the adventure!"></textarea>
-                </div>
-
-                <button type="submit">
-                    <span>Send Message</span>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <path d="m22 2-7 20-4-9-9-4Z"/>
-                        <path d="M22 2 11 13"/>
-                    </svg>
-                </button>
-            </form>
-
-            <div class="footer">
-                <svg class="anchor-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <circle cx="12" cy="5" r="3"/>
-                    <line x1="12" y1="22" x2="12" y2="8"/>
-                    <path d="M5 12H2a10 10 0 0 0 20 0h-3"/>
-                </svg>
-                <span>Written by Alina Chauhan</span>
+            <div class="form-group">
+                <label for="email">Email Address</label>
+                <input type="email" name="email" required placeholder="captain@pirates.com">
             </div>
+
+            <div class="form-group">
+                <label for="message">Your Message</label>
+                <textarea name="message" required placeholder="Tell me what you thought about the adventure!"></textarea>
+            </div>
+
+            <button type="submit">
+                <span>Send Message</span>
+                <span>🚀</span>
+            </button>
+        </form>
+
+        <div class="footer">
+            <p>Written by Alina Chauhan ⚓</p>
         </div>
     </div>
 
+    <div class="waves">
+        <div class="wave wave1"></div>
+        <div class="wave wave2"></div>
+        <div class="wave wave3"></div>
+    </div>
+
+    <script>
+        // Create floating bubbles
+        function createBubbles() {
+            for (let i = 0; i < 10; i++) {
+                const bubble = document.createElement('div');
+                bubble.className = 'bubble';
+                bubble.style.width = Math.random() * 20 + 10 + 'px';
+                bubble.style.height = bubble.style.width;
+                bubble.style.left = Math.random() * 100 + 'vw';
+                bubble.style.top = Math.random() * 100 + 'vh';
+                bubble.style.animationDelay = Math.random() * 2 + 's';
+                document.body.appendChild(bubble);
+            }
+        }
+
+
+        // Initialize bubbles
+        createBubbles();
+    </script>
 </body>
 </html>
